--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "New Blog Name"
-author: "Chad Baldwin"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Iteration #1"
+author: "Sohaib Panwala"
+description: "This is my blog just documenting my data science journey" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "blog@gmail.com"
-twitter_username: "someusername"
-#github_username: "githubuser"
-#linkedin_username: "linkedinuser"
+email: "sohaibpanwala@gmail.com"
+twitter_username: "SohaibWP"
+github_username: "Sohaib3000"
+linkedin_username: "sohaibpanwala"
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
