--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "This is my blog just documenting my data science journey" # This w
 # All of these are optional and can be removed or commented out
 email: "sohaibpanwala@gmail.com"
 twitter_username: "SohaibWP"
-github_username: "Sohaib3000"
+github_username: "Sohaibpanwala"
 linkedin_username: "sohaibpanwala"
 
 #########################################################################################
